refactor(test): add and fix the tests for the latest changes